--- a/estagios/css/respostaEmail.css
+++ b/estagios/css/respostaEmail.css
@@ -406,7 +406,7 @@ body {
 
 .perfil-banner {
   height: 80px;
-  background-image: url("../img/img_Login.png"); /* usa aqui o fundo que quiseres */
+  background-image: url("../../img/img_Login.png"); 
   background-size: cover;
   background-position: center;
 }
@@ -451,6 +451,8 @@ body {
   gap: 10px;
   font-size: 16px;
   margin-bottom: 10px;
+  text-decoration: none;
+  color: #000;
 }
 
 .perfil-row-icon {
